--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1412,3 +1412,8 @@
 		.upper-img{
 			height: 100%;
 		}
+		.drum{
+			background-image: url(https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg);
+			background-position: center;
+			background-size: cover;
+		}
