--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -708,8 +708,8 @@
 					border-radius: 100%;
 					margin: 0;
 					padding: 0.5em;
-					border: solid 1px rgba(144, 144, 144, 0.25);
-					color: rgba(144, 144, 144, 0.25);
+					border: solid 1px white;
+					color: white;
 				}
 
 					ul.icons li a:before {
@@ -1232,7 +1232,7 @@
 		#banner a {
 			color: rgba(255, 255, 255, 0.75);
 			text-decoration: none;
-			border-bottom: 1px dotted;
+			/* border-bottom: 1px dotted; */
 		}
 
 			#banner a:hover {
@@ -1418,5 +1418,9 @@
 			background-size: cover;
 		}
 		.project-img{
-			image-orientation: center;	
+			image-orientation: center;
+		}
+		.top-icon{
+			border: none;
+			border: 1px solid white;
 		}
