add connect 4 back ground image

--- a/connect_four_Jeff_Liang/connectFour.css
+++ b/connect_four_Jeff_Liang/connectFour.css
@@ -64,3 +64,9 @@
 .winner {
   text-align: center;
 }
+
+html {
+  background-image: url(http://res.cloudinary.com/dgxmjwbrc/image/upload/v1531427059/Appalachian1-e1502376240683.jpg);
+  background-size: cover;
+  height: 100%;
+}
