--- a/connect_four_Jeff_Liang/connectFour.css
+++ b/connect_four_Jeff_Liang/connectFour.css
@@ -66,7 +66,7 @@
 }
 
 html {
-  background-image: url(http://res.cloudinary.com/dgxmjwbrc/image/upload/v1531427059/Appalachian1-e1502376240683.jpg);
+  background-image: url(http://res.cloudinary.com/dgxmjwbrc/image/upload/v1531427363/dalishi.png);
   background-size: cover;
   height: 100%;
 }
